# transport-optimal-gdrigrv-11-2020

./: README.md
.github/workflows/: cmake.yml
c++/: CMakeLists.txt  README.md  colorTransfer.cpp
c++/semiDiscrete/: CMakeLists.txt  Delaunay_psm.cpp  iodiagram.h  meshManip.h  semiDiscrete.cpp
c++/sinkhorn/: CMakeLists.txt  main.cpp
c++/slicedOT/: CMakeLists.txt
misc/: README.md  computeHistogram.py
python/: README.md  colorTransfer.py  semi_discrete_ot.html  semi_discrete_ot.ipynb  semi_discrete_ot.py  sinkhorn.py
